# DataCat

./: .gitignore  CHANGELOG.md  DataCat.sln  LICENSE  README.md
.github/workflows/: changelog.yaml
api/grpc/: metrics.proto
api/proto/metrics/: README.md
api/proto/metrics/v1/: metrics.proto
clients/csharp/DataCat.OpenTelemetry.Exporter/: DataCat.OpenTelemetry.Exporter.csproj  DataCatExporter.cs  DataCatExporterHelperExtensions.cs  DataCatExporterOptions.cs  GlobalUsings.cs  NullGuard.cs
clients/csharp/DataCat.OpenTelemetry.Exporter.Example/: DataCat.OpenTelemetry.Exporter.Example.csproj  GlobalUsings.cs  Program.cs
clients/csharp/DataCat.OpenTelemetry.Exporter.Example/Metrics/: MyMetric.cs
clients/csharp/DataCat.OpenTelemetry.Exporter.Example/Properties/: launchSettings.json
clients/csharp/DataCat.OpenTelemetry.Exporter/Implementation/: DataCatExporterEventSource.cs
clients/csharp/DataCat.OpenTelemetry.Exporter/Internal/: AsyncExtensions.cs  ExceptionExtensions.cs
components/metricsdb/: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
components/metricsdb/cmake/: grpc.cmake  gtest.cmake  util.cmake
components/metricsdb/docs/: build.md  dev.md  howitworks.md  overview.md
components/metricsdb/metricsdb/: CMakeLists.txt  main.cpp
components/metricsdb/metricsdb/Config/: CMakeLists.txt  Config.hpp  Version.cpp.in  Version.hpp
components/metricsdb/metricsdb/Core/: CMakeLists.txt  CommonTypes.hpp  Database.cpp  Database.hpp  Enums.hpp  Errors.hpp  InMemoryBlock.hpp  IncomingSample.hpp  MetricKind.hpp  Query.hpp  StorageIterator.hpp  Value.hpp
components/metricsdb/metricsdb/Logging/: Macros.hpp
components/metricsdb/metricsdb/QueryExecution/: QueryContext.hpp  QueryExecutor.cpp  QueryExecutor.hpp
components/metricsdb/metricsdb/QueryParsing/: CMakeLists.txt  Lexer.hpp  Lexer.l  Lexer.test.cpp  Parser.test.cpp  Parser.y  QueryAST.hpp  Result.hpp
components/metricsdb/metricsdb/QueryParsing/AST/: ASTBase.hpp  ASTBinaryExpression.hpp  ASTDataPointsSelector.hpp  ASTExpression.hpp  ASTFunction.hpp  ASTFunctionCall.hpp  ASTLiteral.hpp  ASTTagMatcher.hpp  ASTUnaryExpression.hpp  Application.hpp  Base.hpp  FunctionCall.hpp  Literal.hpp  MetricSelector.hpp  Scalar.hpp  SelectQuery.hpp  Tag.hpp  TagSelector.hpp  TimeSpan.hpp  createAST.hpp
components/metricsdb/metricsdb/QueryParsing/Common/: FunctionKind.hpp
components/metricsdb/metricsdb/QueryParsing/Lexer/: CMakeLists.txt  Lexer.hpp  Lexer.l
components/metricsdb/metricsdb/QueryParsing/Parser/: CMakeLists.txt  Parser.test.cpp  Parser.y  Result.hpp
components/metricsdb/metricsdb/Runner/: CMakeLists.txt  DatabaseRunner.cpp  DatabaseRunner.hpp
components/metricsdb/metricsdb/Server/: CMakeLists.txt  ReaderRequestHandler.cpp  ReaderRequestHandler.hpp  ReadersServer.cpp  ReadersServer.hpp  Server.cpp  Server.hpp  WritersServer.cpp  WritersServer.hpp  handler.cpp  handler.h  request.cpp  request.h
components/metricsdb/metricsdb/Statistics/: DatabaseStatistics.hpp
components/metricsdb/metricsdb/Storage/: Block.hpp  BlockOnDisk.hpp  BlockQuerier.hpp  BlockSamplesIterator.hpp  BlocksBuffer.hpp  CmakeLists.txt  DataPoints.hpp  Encoding.hpp  MetadataBuffer.hpp  MetricInfo.hpp  MetricKind.hpp  MetricsSample.hpp  Storage.hpp  TagMatcher.hpp  TimeSeries.hpp
components/metricsdb/metricsdb/Writers/: WriteRequest.hpp  WriterHandler.hpp
components/metricsdb/metricsdb/config/: CMakeLists.txt  version.cpp.in  version.h
components/metricsdb/metricsdb/parser/: CMakeLists.txt  lexer.h  parser.y
components/metricsdb/metricsdb/server/: CMakeLists.txt  server.cpp  server.h
components/metricsdb/tests/Util/: TestOutput.hpp
components/server/DataCat.Postgres/: DataCat.Postgres.csproj  GlobalUsings.cs  PostgresPlugin.cs
components/server/DataCat.Postgres/Meta/: DatabaseAssemblyScanner.cs
components/server/DataCat.Postgres/Migrations/: 0001_СreatePluginTable.cs  0002_CreateUsersTable.cs  0003_CreateDataSourceTable.cs  0004_CreateDashboardAndPanelTables.cs  0005_CreateDashboardAndUserLink.cs  0006_CreateProcedure_AddDashboard.cs
components/server/DataCat.Postgres/Schemes/: Public.cs  (+1 more)
components/server/DataCat.Server.Api/: DataCat.Server.Api.csproj  DependencyInjection.cs  GlobalUsings.cs  MigrationSummary.md  Program.cs  appsettings.Development.json  appsettings.Production.json
components/server/DataCat.Server.Application/: DataCat.Server.Application.csproj  GlobalUsings.cs
components/server/DataCat.Server.DI/: AppBuilderExtensions.cs  DataCat.Server.DI.csproj  DependencyInjectionExtensions.cs  GlobalUsings.cs  PluginLoader.cs
components/server/DataCat.Server.Domain/: DataCat.Server.Domain.csproj  GlobalUsings.cs
components/server/DataCat.Server.HttpModels/: DataCat.Server.HttpModels.csproj  GlobalUsings.cs
components/server/DataCat.Server.Infrastructure/: DataCat.Server.Infrastructure.csproj  GlobalUsings.cs
components/server/DataCat.Server.Metrics/: DataCat.Server.Metrics.csproj  GlobalUsings.cs
components/server/DataCat.Server.NSwag/: DataCat.Server.NSwag.csproj  nswag.json
components/server/DataCat.Server.PDK/: DataCat.Server.PDK.csproj  GlobalUsings.cs  IAuthPlugin.cs  IDatabasePlugin.cs  INotificationPlugin.cs  ISecretsPlugin.cs
components/server/DataCat.Server.Persistence/: DataCat.Server.Persistence.csproj  GlobalUsings.cs
components/server/DataCat.Server.Postgres/: DataCat.Server.Postgres.csproj  GlobalUsings.cs  PostgresPlugin.cs
components/server/DataCat.Server.Postgres.Migrations/: DataCat.Server.Postgres.Migrations.csproj  GlobalUsings.cs  PostgresMigrationRunner.cs  PostgresRunnerFactory.cs
components/server/DataCat.Server.Telemetry/: DataCat.Server.Telemetry.csproj  DataCatExporterOption.cs  DataCatExporterOptionSetup.cs  DependencyInjection.cs  GlobalUsings.cs  MetricsConstants.cs  MetricsContainer.cs
docs/: structure.md
frontend/datacat-ui/: README.md  angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
frontend/datacat-ui/docs/: dev.md
frontend/datacat-ui/src/: fonts.scss  index.html  styles.scss
metricsdb/: README.md
(+1444 files in other folders)
